2007-02-12	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mount-point.c: Fix compilation on Solaris 2.8. Bug #2798.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-mount-point.c: Fix compilation on newer
	  NetBSD versions. Bug #2808.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* exo-helper/helpers/sylpheed-claws.desktop.in.in: Apply patch from
	  Colin Leroy <colin@colino.net> to replace Sylpheed-Claws with Claws
	  Mail. Bug #2851.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.

2007-01-28	Benedikt Meurer <benny@xfce.org>

	* exo/exo-url.c(exo_url_show_on_screen): Apply patch from Peter de
	  Ridder <pc.ridder@zonnet.nl> to quote URLs properly prior to
	  passing them to external programs. Bug #2791.

2007-01-28	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump required HAL version to 0.5.7. Bug #2828.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-01-20	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.2 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* README, docs/reference/Makefile.am, exo-desktop-item-edit/Makefile.am,
	  exo-hal/Makefile.am, exo-helper/Makefile.am, exo-mount/Makefile.am,
	  exo-open/Makefile.am, exo/Makefile.am, exo/exo.h, python/Makefile.am,
	  tests/Makefile.am: Drop EXO_API_SUBJECT_TO_CHANGE, as the 0.3 API
	  is the stable API for the Xfce 4.4 branch now.

2007-01-15	Benedikt Meurer <benny@xfce.org>

	* exo-mount/exo-mount-hal.c(exo_mount_hal_device_from_udi): Release
	  string array properly.

2007-01-15	Benedikt Meurer <benny@xfce.org>

	* exo-mount/exo-mount-hal.c(exo_mount_hal_device_from_udi): Allow
	  to use the drive UDIs for CD-ROMs, which don't implement the
	  Volume interface, but have atleast one associated, that
	  implements the Volume interface.

2007-01-15	Benedikt Meurer <benny@xfce.org>

	* exo-hal/exo-hal.c(exo_hal_volume_compute_display_name): Fix