@@ -1,3 +1,8 @@
+2007-02-17	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-config.h.in: Make sure EXO_PARAM_READABLE,
+	  EXO_PARAM_WRITABLE and EXO_PARAM_READWRITE are properly set.
+
 2007-02-12	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-mount-point.c: Fix compilation on Solaris 2.8. Bug #2798.
